--- a/res/layout/fragment_main.xml
+++ b/res/layout/fragment_main.xml
@@ -12,8 +12,86 @@
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-  -->
+-->
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/white"
+    android:orientation="vertical"
+    android:weightSum="100"
+   >
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:orientation="horizontal"
+        android:padding="5dp" >
+        
+         <TextView
+            android:id="@+id/textView1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/loc" 
+            android:gravity="center"
+            />
+
+        <TextView
+            android:id="@+id/addrMain"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/addr"
+              android:gravity="center"
+           />
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1" />
+
+        <Button
+            
+            android:id="@+id/addrOther"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/corner"
+            android:drawableLeft="@drawable/button_location"
+            
+            android:text="다른배송지"
+           
+            android:textColor="@color/white" 
+           android:padding="5dp"
+            />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layout_weight="50" >
+
+        <ImageView
+            android:id="@+id/imgAd"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/earth"
+            android:clickable="true" />
+        
+    </LinearLayout>
+  <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layout_weight="40" >
+
+      <ListView
+          android:id="@+id/listView1"
+          android:layout_width="match_parent"
+          android:layout_height="match_parent" >
+      </ListView>
+
+    </LinearLayout>
+</LinearLayout>
+<!--
 <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/image"
     android:layout_width="match_parent"
@@ -21,3 +99,4 @@
     android:background="#ffffff"
     android:gravity="center"
     android:padding="32dp" />
+-->
