--- a/res/layout/fragment_main.xml
+++ b/res/layout/fragment_main.xml
@@ -18,30 +18,27 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:orientation="vertical"
-    android:weightSum="100"
-   >
+    android:weightSum="100" >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:orientation="horizontal"
         android:padding="5dp" >
-        
-         <TextView
+
+        <TextView
             android:id="@+id/textView1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/loc" 
             android:gravity="center"
-            />
+            android:text="@string/loc" />
 
         <TextView
             android:id="@+id/addrMain"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/addr"
-              android:gravity="center"
-           />
+            android:gravity="center"
+            android:text="@string/addr" />
 
         <View
             android:layout_width="0dp"
@@ -49,49 +46,55 @@
             android:layout_weight="1" />
 
         <Button
-            
             android:id="@+id/addrOther"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/corner"
             android:drawableLeft="@drawable/button_location"
-            
+            android:padding="5dp"
             android:text="다른배송지"
-           
-            android:textColor="@color/white" 
-           android:padding="5dp"
-            />
+            android:textColor="@color/white" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_weight="50" >
+        android:layout_weight="50"
+        android:orientation="vertical" >
+<LinearLayout
+                android:id="@+id/page_mark"
+                android:layout_width="fill_parent"
+                android:layout_height="20dp"
+                android:layout_marginRight="5dp"
+                android:gravity="right"
+                android:orientation="horizontal" >
+            </LinearLayout>
+        <android.support.v4.view.ViewPager
+            android:id="@+id/content_pager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:focusable="false" >
 
-        <ImageView
-            android:id="@+id/imgAd"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/earth"
-            android:clickable="true" />
-        
+            
+        </android.support.v4.view.ViewPager>
     </LinearLayout>
-  <LinearLayout
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_weight="40" >
+        android:layout_weight="40"
+        android:orientation="vertical" >
 
-      <ListView
-          android:id="@+id/listView1"
-          android:layout_width="match_parent"
-          android:layout_height="match_parent" >
-      </ListView>
-
+        <GridView
+            android:id="@+id/gridView1"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:numColumns="auto_fit"
+            android:stretchMode="columnWidth" >
+        </GridView>
     </LinearLayout>
-</LinearLayout>
-<!--
+
+</LinearLayout><!--
 <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/image"
     android:layout_width="match_parent"
