--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -25,12 +25,51 @@
          As the main content view, the view below consumes the entire
          space available using match_parent in both dimensions.
     -->
+<LinearLayout 
+    android:layout_width="match_parent"
+        android:layout_height="match_parent" 
+         android:orientation="vertical"
+    >
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:orientation="horizontal"
+        android:padding="5dp" >
 
+        <TextView
+            android:id="@+id/textView222"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="@string/loc" />
+
+        <TextView
+            android:id="@+id/addrMain"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="@string/addr" />
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1" />
+
+        <Button
+            android:id="@+id/addrOther"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/corner"
+            android:drawableLeft="@drawable/button_location"
+            android:padding="5dp"
+            android:text="다른배송지"
+            android:textColor="@color/white" />
+    </LinearLayout>
     <FrameLayout
         android:id="@+id/content_frame"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
-
+</LinearLayout>
     <!--
          android:layout_gravity="start" tells DrawerLayout to treat
          this as a sliding drawer on the left side for left-to-right
