--- a/res/layout/fragment_main.xml
+++ b/res/layout/fragment_main.xml
@@ -20,41 +20,7 @@
     android:orientation="vertical"
     android:weightSum="100" >
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:orientation="horizontal"
-        android:padding="5dp" >
-
-        <TextView
-            android:id="@+id/textView1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="@string/loc" />
-
-        <TextView
-            android:id="@+id/addrMain"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="@string/addr" />
-
-        <View
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1" />
-
-        <Button
-            android:id="@+id/addrOther"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/corner"
-            android:drawableLeft="@drawable/button_location"
-            android:padding="5dp"
-            android:text="다른배송지"
-            android:textColor="@color/white" />
-    </LinearLayout>
+    
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -63,8 +29,8 @@
         android:orientation="vertical" >
 <LinearLayout
                 android:id="@+id/page_mark"
-                android:layout_width="fill_parent"
-                android:layout_height="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="15dp"
                 android:layout_marginRight="5dp"
                 android:gravity="right"
                 android:orientation="horizontal" >
@@ -89,12 +55,15 @@
             android:id="@+id/gridView1"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:numColumns="auto_fit"
-            android:stretchMode="columnWidth" >
+            android:numColumns="2"
+            android:stretchMode="columnWidth" 
+           
+            android:gravity="center">
         </GridView>
     </LinearLayout>
 
-</LinearLayout><!--
+</LinearLayout>
+<!--
 <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/image"
     android:layout_width="match_parent"
