--- a/res/layout/gridview_item.xml
+++ b/res/layout/gridview_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="150dp"
-    android:layout_height="150dp"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="vertical"
     
     >
@@ -22,6 +22,7 @@
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_alignParentBottom="true"
+         
          android:gravity="center"
          android:background="@color/black"
          android:text="배달가능"
