회원가입 서버 데이터 전송 확인

--- a/res/layout/activity_adduser.xml
+++ b/res/layout/activity_adduser.xml
@@ -123,12 +123,16 @@
             android:layout_height="wrap_content"
             android:text="휴대폰 번호"
             android:textAppearance="?android:attr/textAppearanceSmall" />
-
+	<Spinner 
+	    android:id="@+id/user_mobile_spinner"
+	    android:layout_width="wrap_content"
+	    android:layout_height="wrap_content"/>
+	
         <EditText
             android:id="@+id/user_mobile"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+           
             android:ems="10"
             android:inputType="phone" />
     </LinearLayout>
