--- a/res/layout/activity_cart.xml
+++ b/res/layout/activity_cart.xml
@@ -12,7 +12,7 @@
         android:layout_weight="10">
 
         <TextView
-            android:id="@+id/tv_cart_store_name"
+            android:id="@+id/cart_tv_store_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="상호명"
@@ -23,16 +23,16 @@
             android:layout_weight="1" />
             
         <Button
-            android:id="@+id/btn_cart_insert"
+            android:id="@+id/cart_btn_insert"
             style="?android:attr/buttonStyleSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/menu_insert" 
-            android:background="@color/red"/>
+            />
 
     </LinearLayout>
      <ListView
-          android:id="@+id/listView1"
+          android:id="@+id/cart_listview"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
             android:layout_weight="60" >
@@ -45,14 +45,14 @@
           android:orientation="vertical" >
 
         <TextView
-            android:id="@+id/tv_cart_order_min"
+            android:id="@+id/cart_tv_order_min"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
             android:text="최소주문 금액 : 15,000원 이상" />
 
         <TextView
-            android:id="@+id/tv_cart_order_sum"
+            android:id="@+id/cart_tv_order_sum"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="합계  : 114,000원"
@@ -60,11 +60,11 @@
             android:textColor="@color/red"
             android:textAppearance="?android:attr/textAppearanceMedium" />
           <Button
-            android:id="@+id/btn_order"
+            android:id="@+id/cart_btn_order"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/order" 
-            android:background="@color/blue"/>
+            />
 
     </LinearLayout>
 
