--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -81,124 +81,148 @@
 
     <LinearLayout
         android:id="@+id/drawer_linear"
-        android:layout_width="240dp"
+        android:layout_width="180dp"
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:background="@color/black"
         android:choiceMode="singleChoice"
         android:divider="@android:color/transparent"
-        android:dividerHeight="0dp"
+        android:dividerHeight="1dp"
         android:orientation="vertical"
-        android:weightSum="10" >
+        android:weightSum="14"
+     >
 
-        <LinearLayout
+     
+
+        <TextView
+            android:id="@+id/drawer_myorder"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="2"
-            android:orientation="vertical" >
+            android:layout_height="wrap_content"
+            android:text="내 주문내역"
+            android:layout_weight="1"
+            android:textColor="@color/white"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
 
-            <TextView
-                android:id="@+id/textView1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="?android:attr/activatedBackgroundIndicator"
-                android:gravity="center_vertical"
-                android:minHeight="?android:attr/listPreferredItemHeightSmall"
-                android:paddingLeft="16dp"
-                android:paddingRight="16dp"
-                android:text="내 주문내역"
-                android:textColor="@color/white"
-                android:textAppearance="?android:attr/textAppearanceListItemSmall" />
-
-            <TextView
-                android:id="@+id/textView2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="?android:attr/activatedBackgroundIndicator"
-                android:gravity="center_vertical"
-                android:minHeight="?android:attr/listPreferredItemHeightSmall"
-                android:paddingLeft="16dp"
-                android:paddingRight="16dp"
-                android:text="회원가입 / 로그인"
-                android:textColor="@color/white"
-                android:textAppearance="?android:attr/textAppearanceListItemSmall" />
-
-            <TextView
-                android:id="@+id/textView6"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="?android:attr/activatedBackgroundIndicator"
-                android:gravity="center_vertical"
-                android:minHeight="?android:attr/listPreferredItemHeightSmall"
-                android:paddingLeft="16dp"
-                android:paddingRight="16dp"
-                android:text="카테고리"
-                android:textColor="@color/white"
-                android:textAppearance="?android:attr/textAppearanceListItemSmall" />
-        </LinearLayout>
-
-        <LinearLayout
+        <TextView
+            android:id="@+id/drawer_adduser"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="6"
-            android:orientation="vertical" >
+            android:layout_height="wrap_content"
+            android:text="회원가입 / 로그인"
+            android:layout_weight="1"
+             android:textColor="@color/white"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
 
-            <ListView
-                android:id="@+id/left_drawer"
-                android:layout_width="240dp"
-                android:layout_height="match_parent"
-                android:layout_gravity="start"
-                android:choiceMode="singleChoice"
-                android:divider="@android:color/transparent"
-                android:dividerHeight="0dp" >
-            </ListView>
-        </LinearLayout>
-
-        <LinearLayout
+        <TextView
+            android:id="@+id/textView6"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="2"
-            android:orientation="vertical" >
+            android:layout_height="wrap_content"
+            android:text="카테고리"
+             android:layout_weight="1"
+              android:textColor="@color/white"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+        <View 
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/white"/>
+   
 
-            <TextView
-                android:id="@+id/textView3"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="?android:attr/activatedBackgroundIndicator"
-                android:gravity="center_vertical"
-                android:minHeight="?android:attr/listPreferredItemHeightSmall"
-                android:paddingLeft="16dp"
-                android:paddingRight="16dp"
-                android:text="Medium Text"
-                android:textColor="@color/white"
-                android:textAppearance="?android:attr/textAppearanceListItemSmall" />
+        <TextView
+            android:id="@+id/drawer_food_all"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="전체"
+             android:layout_weight="1"
+              android:textColor="@color/white"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+ <TextView
+            android:id="@+id/drawer_food_chicken"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="치킨"
+             android:layout_weight="1"
+              android:textColor="@color/white"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+  <TextView
+            android:id="@+id/drawer_food_pig"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="족발/보쌈"
+             android:layout_weight="1"
+              android:textColor="@color/white"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+   <TextView
+            android:id="@+id/drawer_food_korea"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="한식/분식"
+             android:layout_weight="1"
+              android:textColor="@color/white"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+    <TextView
+            android:id="@+id/drawer_food_night"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="야식"
+             android:layout_weight="1"
+              android:textColor="@color/white"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+     <TextView
+            android:id="@+id/drawer_food_japan"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="일식/돈까스"
+             android:layout_weight="1"
+              android:textColor="@color/white"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+      <TextView
+            android:id="@+id/drawer_food_box"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="도시락/죽"
+             android:layout_weight="1"
+              android:textColor="@color/white"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+       <TextView
+            android:id="@+id/drawer_food_exten"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="기타"
+             android:layout_weight="1"
+              android:textColor="@color/white"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+        <View 
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/white"/>
+   
+       
+        <TextView
+            android:id="@+id/drawer_center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="고객센터"
+             android:layout_weight="1"
+              android:textColor="@color/white"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
 
-            <TextView
-                android:id="@+id/textView4"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="?android:attr/activatedBackgroundIndicator"
-                android:gravity="center_vertical"
-                android:minHeight="?android:attr/listPreferredItemHeightSmall"
-                android:paddingLeft="16dp"
-                android:paddingRight="16dp"
-                android:text="Medium Text"
-                android:textColor="@color/white"
-                android:textAppearance="?android:attr/textAppearanceListItemSmall" />
+        <TextView
+            android:id="@+id/drawer_event"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="이벤트" 
+            android:layout_weight="1"
+             android:textColor="@color/white"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+                <TextView
+            android:id="@+id/drawer_setting"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="설정"
+             android:layout_weight="1"
+              android:textColor="@color/white"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+    
 
-            <TextView
-                android:id="@+id/textView5"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="?android:attr/activatedBackgroundIndicator"
-                android:gravity="center_vertical"
-                android:minHeight="?android:attr/listPreferredItemHeightSmall"
-                android:paddingLeft="16dp"
-                android:paddingRight="16dp"
-                android:text="Medium Text"
-                android:textColor="@color/white"
-                android:textAppearance="?android:attr/textAppearanceListItemSmall" />
-        </LinearLayout>
     </LinearLayout>
 
     <!--
