서버회원정보반환확인 및 화면연결완료(검색화면제외)

--- a/res/layout/activity_adduser.xml
+++ b/res/layout/activity_adduser.xml
@@ -17,7 +17,7 @@
             android:textAppearance="?android:attr/textAppearanceSmall" />
 
         <EditText
-            android:id="@+id/user_cNum"
+            android:id="@+id/user_regKey"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
