--- a/res/layout/fragment_menu.xml
+++ b/res/layout/fragment_menu.xml
@@ -4,10 +4,21 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="fragment menu" />
+  <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+       
+        android:orientation="vertical" >
+
+        <GridView
+            android:id="@+id/menu_grid_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:numColumns="2"
+            android:stretchMode="columnWidth" 
+           
+            android:gravity="center">
+        </GridView>
+    </LinearLayout>
 
 </LinearLayout>
