메뉴리스트 선택시 서버정보 수신하여 카테고리별로 상호리스트 출력 부분 서버 이미지 수신 문제로 대기

--- a/res/layout/activity_adduser.xml
+++ b/res/layout/activity_adduser.xml
@@ -190,7 +190,7 @@
             android:id="@+id/user_btn_reg"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/add_user" />
+            android:text="@string/title_add_user" />
 
     </LinearLayout>
 
