--- a/res/layout/drawer_list_item_header.xml
+++ b/res/layout/drawer_list_item_header.xml
@@ -27,9 +27,10 @@
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
     android:textColor="#fff"
-    android:text="내 주문내역"
+    android:text="@string/title_myhistory"
     android:background="?android:attr/activatedBackgroundIndicator"
-    android:minHeight="?android:attr/listPreferredItemHeightSmall"/>
+    android:minHeight="?android:attr/listPreferredItemHeightSmall"
+    android:clickable="true"/>
 
     <TextView 
     android:id="@+id/drawer_list_item_header_tv2"
@@ -40,9 +41,10 @@
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
     android:textColor="#fff"
-    android:text="회원가입/로그인"
+    android:text="@string/title_join_login"
     android:background="?android:attr/activatedBackgroundIndicator"
-    android:minHeight="?android:attr/listPreferredItemHeightSmall"/>
+    android:minHeight="?android:attr/listPreferredItemHeightSmall"
+    android:clickable="true"/>
     
     
       <TextView 
@@ -54,9 +56,10 @@
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
     android:textColor="#fff"
-    android:text="카테고리"
+    android:text="@string/category"
     android:background="?android:attr/activatedBackgroundIndicator"
-    android:minHeight="?android:attr/listPreferredItemHeightSmall"/>
+    android:minHeight="?android:attr/listPreferredItemHeightSmall"
+    />
     
     
     </LinearLayout>
