--- a/res/layout/activity_cart.xml
+++ b/res/layout/activity_cart.xml
@@ -63,7 +63,7 @@
             android:id="@+id/cart_btn_order"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/order" 
+            android:text="@string/title_order" 
             />
 
     </LinearLayout>
