--- a/res/layout/fragment_store.xml
+++ b/res/layout/fragment_store.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical" >
 
     <ImageView
-        android:id="@+id/imageView1"
+        android:id="@+id/store_img"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/menu_sample" 
@@ -71,35 +71,41 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:visibility="invisible"
-                android:orientation="vertical" >
+                android:orientation="vertical"
+                android:layout_margin="10dp" >
 
                 <TableLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:stretchColumns="*" >
+                    android:stretchColumns="*"
+                    android:weightSum="6" >
 
                     <TableRow
                         android:id="@+id/TableRow05"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" >
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1" >
 
                         <TextView
                             android:id="@+id/TextView10"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="전화번호" />
+                            android:text="전화번호"
+                             />
 
                         <TextView
                             android:id="@+id/store_tv_phone"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="0504-525-5221" />
+                            android:text="0504-525-5221" 
+                            android:gravity="center"/>
                     </TableRow>
 
                     <TableRow
                         android:id="@+id/TableRow04"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" >
+                        android:layout_height="wrap_content" 
+                         android:layout_weight="1" >
 
                         <TextView
                             android:id="@+id/TextView08"
@@ -111,31 +117,36 @@
                             android:id="@+id/store_tv_delivery"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="배달만 가능" />
+                            android:text="배달만 가능" 
+                            android:gravity="center"/>
                     </TableRow>
 
                     <TableRow
                         android:id="@+id/TableRow03"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" >
+                        android:layout_height="wrap_content"
+                         android:layout_weight="1"  >
 
                         <TextView
                             android:id="@+id/TextView06"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="카드결제" />
+                            android:text="카드결제"
+                             />
 
                         <TextView
                             android:id="@+id/store_tv_card"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="가능" />
+                            android:text="가능" 
+                            android:gravity="center"/>
                     </TableRow>
 
                     <TableRow
                         android:id="@+id/TableRow02"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" >
+                        android:layout_height="wrap_content" 
+                         android:layout_weight="1" >
 
                         <TextView
                             android:id="@+id/TextView04"
@@ -147,13 +158,15 @@
                             android:id="@+id/store_tv_time"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="오전 11:00 ~ 아침 06:00" />
+                            android:text="오전 11:00 ~ 아침 06:00" 
+                            android:gravity="center"/>
                     </TableRow>
 
                     <TableRow
                         android:id="@+id/TableRow01"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" >
+                        android:layout_height="wrap_content"
+                         android:layout_weight="1"  >
 
                         <TextView
                             android:id="@+id/TextView02"
@@ -165,50 +178,31 @@
                             android:id="@+id/store_tv_money"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="10,000원 이상 배달가능" />
+                            android:text="10,000원 이상 배달가능"
+                            android:gravity="center" />
                     </TableRow>
-<View 
-	    android:layout_width="match_parent"
-	    android:layout_height="1dp"
-	    />
+
                     <TableRow
                         android:id="@+id/tableRow1"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" >
+                        android:layout_height="wrap_content"
+                         android:layout_weight="1"  >
 
                         <TextView
                             android:id="@+id/textView1"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="휴무일" />
+                            android:text="배달가능지역" />
 
                         <TextView
-                            android:id="@+id/store_tv_rest"
+                            android:id="@+id/store_tv_loc"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="연중무휴" />
+                            android:text="관악구,구로구,금천구일대"
+                            android:gravity="center" />
 
                     </TableRow>
-	<View 
-	    android:layout_width="match_parent"
-	    android:layout_height="1dp"
-	    />
-                    <TableRow
-                        android:id="@+id/tableRow3"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" >
-                         <TextView
-                            android:id="@+id/textView004"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="임시휴무일" />
-
-                        <TextView
-                            android:id="@+id/store_tv_rest_temp"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="정보없음" />
-                    </TableRow>
+	
 
                    
                 </TableLayout>
