--- a/res/layout/activity_select_order.xml
+++ b/res/layout/activity_select_order.xml
@@ -195,7 +195,12 @@
                 android:text="+" />
         </LinearLayout>
     </LinearLayout>
-
+<TextView
+            android:id="@+id/order_tv_price_min"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:text="최소주문 금액 : 15,000원 이상" />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
