--- a/res/layout/activity_send_order.xml
+++ b/res/layout/activity_send_order.xml
@@ -106,6 +106,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="현금" />
+             <CheckBox
+                android:id="@+id/send_cb_local_cash"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="지역화폐" />
 
         </LinearLayout>
 
