--- a/res/layout/activity_send_order.xml
+++ b/res/layout/activity_send_order.xml
@@ -126,7 +126,7 @@
                 android:text="주문 내역" />
 
             <ListView
-                android:id="@+id/listView1"
+                android:id="@+id/send_listView"
                 android:layout_width="match_parent"
                 android:layout_height="100dp" >
             </ListView>
