--- a/res/layout/fragment_menu.xml
+++ b/res/layout/fragment_menu.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-  <LinearLayout
+  <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
        
@@ -14,11 +14,13 @@
             android:id="@+id/menu_grid_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:verticalSpacing="0dp"
+            android:horizontalSpacing="0dp"
             android:numColumns="2"
             android:stretchMode="columnWidth" 
            
             android:gravity="center">
         </GridView>
-    </LinearLayout>
+    </FrameLayout>
 
 </LinearLayout>
