--- a/res/layout/gridview_item.xml
+++ b/res/layout/gridview_item.xml
@@ -1,77 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:id="@+id/grid_item_layout"
     
     >
 
- <RelativeLayout
-     android:id="@+id/grid_item_layout"
-     android:layout_width="match_parent"
-     android:layout_height="match_parent"
-     >
+ 
 
-     <ImageView
+     <kr.actus.ckck.util.SquareImageView
          android:id="@+id/grid_img"
          android:layout_width="match_parent"
-         android:layout_height="match_parent"
-         android:src="@drawable/menu_sample" 
-         android:focusable="false"
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop"
         
      />
-          <TextView
-         android:id="@+id/grid_tv_deli"
+
+     <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
-         android:layout_alignParentBottom="true"
-         android:focusable="false"
-         android:gravity="center"
-         android:background="@color/black"
-         android:text="배달가능"
-         android:singleLine="true"
-         android:textAppearance="?android:attr/textAppearanceSmall"
-         android:textColor="@color/white" />
+         android:background="#55000000"
+         android:layout_gravity="bottom"
+         android:orientation="vertical"
+         android:paddingBottom="15dp"
+         android:paddingLeft="10dp"
+         android:paddingRight="10dp"
+         android:paddingTop="15dp" >
+  <TextView
+             android:id="@+id/grid_tv_title"
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             android:textColor="@color/menu_title" />
+  <TextView
+             android:id="@+id/grid_tv_type"
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             android:textColor="@android:color/white" />
+   <TextView
+             android:id="@+id/grid_tv_min"
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             android:textColor="@android:color/white" />
+         <TextView
+             android:id="@+id/grid_tv_deli"
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             android:textColor="@android:color/white" />
 
-     <TextView
-         android:id="@+id/grid_tv_min"
-         android:layout_width="match_parent"
-         android:layout_height="wrap_content"
-         android:layout_above="@+id/grid_tv_deli"
-         android:gravity="center"
-         android:background="@color/black"
-         android:singleLine="true"
-         android:focusable="false"
-         android:text="최소주문:30,000원"
-         android:textAppearance="?android:attr/textAppearanceSmall"
-         android:textColor="@color/white" />
+        
 
-     <TextView
-         android:id="@+id/grid_tv_type"
-         android:layout_width="match_parent"
-         android:layout_height="wrap_content"
-         android:layout_above="@+id/grid_tv_min"
-        android:gravity="center"
-         android:background="@color/black"
-         android:singleLine="true"
-         android:text="오리, 게장"
-         android:focusable="false"
-         android:textAppearance="?android:attr/textAppearanceSmall"
-         android:textColor="@color/white" />
+         
 
-     <TextView
-         android:id="@+id/grid_tv_title"
-         android:layout_width="fill_parent"
-         android:layout_height="wrap_content"
-         android:layout_above="@+id/grid_tv_type"
-          android:gravity="center"
-         android:background="@color/black"
-         android:singleLine="true"
-         android:text="오리와 꽃게 사당역점"
-         android:focusable="false"
-         android:textAppearance="?android:attr/textAppearanceMedium"
-         android:textColor="@color/menu_title" />
+       
+     </LinearLayout>
 
- </RelativeLayout>
-
-</LinearLayout>
+</FrameLayout>
